Fix comment form input alignment

--- a/front/src/app.css
+++ b/front/src/app.css
@@ -150,6 +150,7 @@ a {
   padding: 4px;
   color: var(--text-color);
   margin-right: 5px;
+  margin-bottom: 0;
 }
 
 #author-input {
